--- a/homeworks/hw1/Exercise 1.ipynb
+++ b/homeworks/hw1/Exercise 1.ipynb
@@ -31,6 +31,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "print(\"edit TEST\")"
+      ],
+      "metadata": {
+        "id": "dJd2NkUAcL-a",
+        "outputId": "84201c7e-ca85-4bcd-c181-a8d271151604",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "edit TEST\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3V9s_I_gbktz"
