--- a/homeworks/hw1/Exercise 2.ipynb
+++ b/homeworks/hw1/Exercise 2.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NVQ5H8o4iaUa"
+        "id": "5u08wg5j72Te"
       },
       "source": [
         "# Intro to Python: Exercise 2\n",
@@ -18,7 +18,7 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "R9nfzTjuiaUc"
+        "id": "fd5xp4ab72Tg"
       },
       "outputs": [],
       "source": [
@@ -32,7 +32,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fBYTpMFeiaUd"
+        "id": "G-TVMvz472Tg"
       },
       "source": [
         "Data Generation\n",
@@ -41,11 +41,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "0kLN9-q2iaUd"
+        "id": "g9_BVZw672Tg",
+        "outputId": "60978ea8-095e-4391-f9d1-73eaa281dfb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.77132064 0.02075195]\n",
+            " [0.63364823 0.74880388]\n",
+            " [0.49850701 0.22479665]\n",
+            " [0.19806286 0.76053071]] \n",
+            "\n",
+            " [[0.16911084 0.08833981]\n",
+            " [0.68535982 0.95339335]\n",
+            " [0.00394827 0.51219226]\n",
+            " [0.81262096 0.61252607]\n",
+            " [0.72175532 0.29187607]]\n"
+          ]
+        }
+      ],
       "source": [
         "np.random.seed(10)\n",
         "p, q = (np.random.rand(i, 2) for i in (4, 5))\n",
@@ -57,31 +78,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9gnJKuUMiaUd"
+        "id": "0MG16Ha372Tg"
       },
       "source": [
-        "Solution\n",
+        "*Solution*\n",
         "==="
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "collapsed": true,
-        "id": "aKbu23NoiaUd"
+        "id": "wpciUhdJ72Tg"
       },
       "outputs": [],
       "source": [
         "def naive(p, q):\n",
-        "    ''' fill your code in here...\n",
-        "    '''"
+        "  (p_0, q_0) = (p.shape[0], q.shape[0])\n",
+        "  d = np.array((p_0, q_0))\n",
+        "  for i in range(p_0):\n",
+        "    for j in range(q_0):\n",
+        "      d[i, j] = np.sqrt((p[i, 0] - q[j, 0]) ** 2 + (p[i, 1] - q[i, 1]) ** 2)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ODQE2lP8iaUd"
+        "id": "3-mlNRME72Th"
       },
       "source": [
         "### Use matching indices\n",
@@ -91,11 +116,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "wG_P3sE3iaUd"
+        "id": "HpbLwe_D72Th",
+        "outputId": "b4faa927-7653-4df8-fdef-116016de910a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 0 0 0 0]\n",
+            " [1 1 1 1 1]\n",
+            " [2 2 2 2 2]\n",
+            " [3 3 3 3 3]]\n",
+            "\n",
+            "[[0 1 2 3 4]\n",
+            " [0 1 2 3 4]\n",
+            " [0 1 2 3 4]\n",
+            " [0 1 2 3 4]]\n"
+          ]
+        }
+      ],
       "source": [
         "rows, cols = np.indices((p.shape[0], q.shape[0]))\n",
         "print(rows, end='\\n\\n')\n",
@@ -106,7 +151,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zMltIKoqiaUe"
+        "id": "ho8Ctgmh72Th"
       },
       "outputs": [],
       "source": [
@@ -119,7 +164,7 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "HHnHUtweiaUe"
+        "id": "fzF7IaJ572Th"
       },
       "outputs": [],
       "source": [
@@ -131,7 +176,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jS9AP7j7iaUe"
+        "id": "5o_C50KW72Th"
       },
       "source": [
         "### Use a library\n",
@@ -143,7 +188,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7aIJ5a5LiaUe"
+        "id": "zsiels6_72Th"
       },
       "outputs": [],
       "source": [
@@ -156,7 +201,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YnVzYIW1iaUe"
+        "id": "C_M32a8B72Th"
       },
       "source": [
         "### Numpy Magic"
@@ -166,7 +211,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "5by3NqVPiaUe"
+        "id": "VG5P8szy72Ti"
       },
       "outputs": [],
       "source": [
@@ -177,7 +222,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6SQCWEDziaUe"
+        "id": "3Y824ZHu72Ti"
       },
       "source": [
         "# Compare methods"
@@ -187,7 +232,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "hx4TQEkOiaUe"
+        "id": "FqIg5wqe72Ti"
       },
       "outputs": [],
       "source": [
@@ -202,7 +247,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Cma2_LKbiaUf"
+        "id": "7k-Y1CCa72Ti"
       },
       "outputs": [],
       "source": [
@@ -219,7 +264,7 @@
       "execution_count": null,
       "metadata": {
         "collapsed": true,
-        "id": "ySY32z30iaUf"
+        "id": "9md4HLLH72Ti"
       },
       "outputs": [],
       "source": []
