--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -339,8 +339,7 @@
         "        - loss as a single float\n",
         "        - gradient with respect to self.W; an array of the same shape as W\n",
         "        \"\"\"\n",
-        "        pass\n",
-        ""
+        "        pass\n"
       ],
       "metadata": {
         "id": "nuhecHcsvJU7"
