--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "KQ8b6HtX7DWs"
       },
@@ -62,10 +62,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "rb1FNWrPvqVB"
+        "id": "rb1FNWrPvqVB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6f4ff59-c068-4638-8d71-70d316c714b5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -158,10 +170,40 @@
         "print('Validation labels shape: ', y_val.shape)"
       ],
       "metadata": {
-        "id": "vW0orz8Z7O0e"
+        "id": "vW0orz8Z7O0e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0d46c94e-aeb3-40f3-a0c1-84b64dc875f5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to data/cifar-10-python.tar.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170M/170M [00:04<00:00, 39.3MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/cifar-10-python.tar.gz to data/\n",
+            "Train data shape:  (49000, 3073)\n",
+            "Train labels shape:  (49000,)\n",
+            "Validation data shape:  (1000, 3073)\n",
+            "Validation labels shape:  (1000,)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,7 +245,15 @@
         "    # Store the loss in loss and the gradient in dW. If you are not careful     #\n",
         "    # here, it is easy to run into numeric instability.                         #\n",
         "    #############################################################################\n",
-        "    pass\n",
+        "    y_pred = X @ W\n",
+        "    y_pred -= np.max(y_pred, axis=1, keepdims=True)\n",
+        "    y_pred = np.exp(y_pred)\n",
+        "    y_pred /= np.sum(y_pred, axis=1, keepdims=True)\n",
+        "    loss = -np.sum(np.log(y_pred[range(X.shape[0]), y]))\n",
+        "    loss /= X.shape[0]\n",
+        "    y_pred[range(X.shape[0]), y] -= 1\n",
+        "    dW = X.T @ y_pred\n",
+        "    dW /= X.shape[0]\n",
         "    #############################################################################\n",
         "    #                          END OF YOUR CODE                                 #\n",
         "    #############################################################################\n",
