--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "aFed4lnK7yfC"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -318,7 +318,7 @@
         "            # Sample batch_size elements from the training data and their           #\n",
         "            # corresponding labels to use in this round of gradient descent.        #\n",
         "            # Store the data in X_batch and their corresponding labels in           #\n",
-        "            # y_batch; after sampling X_batch should have shape (dim, batch_size)   #\n",
+        "            # y_batch; after sampling X_batch should have shape (dim, batch_size) --> (batch_size, dim) instead ??   #\n",
         "            # and y_batch should have shape (batch_size,)                           #\n",
         "            #                                                                       #\n",
         "            # Hint: Use np.random.choice to generate indices. Sampling with         #\n",
