--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -324,9 +324,9 @@
         "            # Hint: Use np.random.choice to generate indices. Sampling with         #\n",
         "            # replacement is faster than sampling without replacement.              #\n",
         "            #########################################################################\n",
-        "            X_batch = None\n",
-        "            y_batch = None\n",
-        "            pass\n",
+        "            indices = np.random.choice(num_train, batch_size)\n",
+        "            X_batch = X[indices]\n",
+        "            y_batch = y[indices]\n",
         "            #########################################################################\n",
         "            #                       END OF YOUR CODE                                #\n",
         "            #########################################################################\n",
@@ -340,7 +340,7 @@
         "            # TODO:                                                                 #\n",
         "            # Update the weights using the gradient and the learning rate.          #\n",
         "            #########################################################################\n",
-        "            pass\n",
+        "            W -= learning_rate * grad\n",
         "            #########################################################################\n",
         "            #                       END OF YOUR CODE                                #\n",
         "            #########################################################################\n",
