--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -340,7 +340,7 @@
         "            # TODO:                                                                 #\n",
         "            # Update the weights using the gradient and the learning rate.          #\n",
         "            #########################################################################\n",
-        "            W -= learning_rate * grad\n",
+        "            self.W -= learning_rate * grad\n",
         "            #########################################################################\n",
         "            #                       END OF YOUR CODE                                #\n",
         "            #########################################################################\n",
@@ -369,7 +369,7 @@
         "        # TODO:                                                                   #\n",
         "        # Implement this method. Store the predicted labels in y_pred.            #\n",
         "        ###########################################################################\n",
-        "        pass\n",
+        "        y_pred = np.argmax(X @ self.W, axis=1)\n",
         "        ###########################################################################\n",
         "        #                           END OF YOUR CODE                              #\n",
         "        ###########################################################################\n",
@@ -394,7 +394,7 @@
       "metadata": {
         "id": "nuhecHcsvJU7"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
