--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -418,16 +418,28 @@
       "metadata": {
         "id": "GTqa5eihvOvz"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "BomGJP517DWv"
+        "id": "BomGJP517DWv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b8002d7-b5e3-4b34-a0e7-27320ae91d0d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "vectorized loss: 2.303278e+00 computed in 0.065489s\n"
+          ]
+        }
+      ],
       "source": [
         "W = np.random.randn(3073, 10) * 0.0001\n",
         "tic = time.time()\n",
