--- a/homeworks/hw2/Evaluator.ipynb
+++ b/homeworks/hw2/Evaluator.ipynb
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "fPFXjAVFIKnh"
       },
@@ -39,30 +39,60 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "uGxnwhvlwMiI"
+        "id": "uGxnwhvlwMiI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c04ad643-a5c4-42b3-f197-b902301341b8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/vita-epfl/DLAV-2024.git\n",
-        "path = os.getcwd() + '/DLAV-2024/homeworks/hw2/test_batch'"
+        "!git clone https://github.com/vita-epfl/DLAV-2025.git\n",
+        "path = os.getcwd() + '/DLAV-2025/homeworks/hw2/test_batch'"
       ],
       "metadata": {
-        "id": "SwxcJW9wI9fp"
+        "id": "SwxcJW9wI9fp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d3516352-b84f-43fe-f256-5bea45f5a7ff"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'DLAV-2025'...\n",
+            "remote: Enumerating objects: 47, done.\u001b[K\n",
+            "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
+            "remote: Total 47 (delta 7), reused 6 (delta 6), pack-reused 32 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (47/47), 27.72 MiB | 13.55 MiB/s, done.\n",
+            "Resolving deltas: 100% (14/14), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Write the location of the saved weight relative to this notebook. Assume that they are in the same directory\n",
         "### Path to Model Weights\n",
-        "softmax_weights = ....\n",
-        "pytorch_weights = ...."
+        "pytorch_weights = os.getcwd() + '/drive/MyDrive/Colab Notebooks/linearClassifier_pytorch.ckpt'\n",
+        "softmax_weights = os.getcwd() + '/drive/MyDrive/Colab Notebooks/softmax_weights.pkl'"
       ],
       "metadata": {
         "id": "pZXQTJIKJE_S"
@@ -98,7 +128,15 @@
         "    # here, it is easy to run into numeric instability. Don't forget the        #\n",
         "    # regularization!                                                           #\n",
         "    #############################################################################\n",
-        "    pass\n",
+        "    y_pred = X @ W\n",
+        "    y_pred -= np.max(y_pred, axis=1, keepdims=True)\n",
+        "    y_pred = np.exp(y_pred)\n",
+        "    y_pred /= np.sum(y_pred, axis=1, keepdims=True)\n",
+        "    loss = -np.sum(np.log(y_pred[range(X.shape[0]), y]))\n",
+        "    loss /= X.shape[0]\n",
+        "    y_pred[range(X.shape[0]), y] -= 1\n",
+        "    dW = X.T @ y_pred\n",
+        "    dW /= X.shape[0]\n",
         "    #############################################################################\n",
         "    #                          END OF YOUR CODE                                 #\n",
         "    #############################################################################\n",
@@ -154,13 +192,15 @@
         "            # Hint: Use np.random.choice to generate indices. Sampling with         #\n",
         "            # replacement is faster than sampling without replacement.              #\n",
         "            #########################################################################\n",
-        "            pass\n",
+        "            indices = np.random.choice(num_train, batch_size)\n",
+        "            X_batch = X[indices]\n",
+        "            y_batch = y[indices]\n",
         "            #########################################################################\n",
         "            #                       END OF YOUR CODE                                #\n",
         "            #########################################################################\n",
         "\n",
         "            # evaluate loss and gradient\n",
-        "            loss, grad = self.loss(X_batch, y_batch, reg)\n",
+        "            loss, grad = self.loss(X_batch, y_batch)\n",
         "            loss_history.append(loss)\n",
         "\n",
         "            # perform parameter update\n",
@@ -168,7 +208,7 @@
         "            # TODO:                                                                 #\n",
         "            # Update the weights using the gradient and the learning rate.          #\n",
         "            #########################################################################\n",
-        "            pass\n",
+        "            self.W -= learning_rate * grad\n",
         "            #########################################################################\n",
         "            #                       END OF YOUR CODE                                #\n",
         "            #########################################################################\n",
@@ -200,8 +240,8 @@
         "        # TODO:                                                                   #\n",
         "        # Implement this method. Store the predicted labels in y_pred.            #\n",
         "        ###########################################################################\n",
-        "        pass\n",
-        "\n",
+        "        y_pred = np.zeros(X.shape[0])\n",
+        "        y_pred = np.argmax(X @ self.W, axis=1)\n",
         "        ###########################################################################\n",
         "        #                           END OF YOUR CODE                              #\n",
         "        ###########################################################################\n",
@@ -244,7 +284,7 @@
       "metadata": {
         "id": "gHnLX6-oIkWm"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -262,16 +302,19 @@
         "class Net(torch.nn.Module):\n",
         "    def __init__(self, n_feature, n_hidden, n_output):\n",
         "        super(Net, self).__init__()\n",
-        "        pass\n",
+        "        self.fc1 = torch.nn.Linear(n_feature, n_hidden)\n",
+        "        self.fc2 = torch.nn.Linear(n_hidden, n_output)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        pass\n",
+        "        x = x.view(x.size(0),-1)\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = self.fc2(x)\n",
         "        return x"
       ],
       "metadata": {
         "id": "mSTfKTHEJBhy"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
