--- a/homeworks/hw2/Evaluator.ipynb
+++ b/homeworks/hw2/Evaluator.ipynb
@@ -309,12 +309,17 @@
         "        x = x.view(x.size(0),-1)\n",
         "        x = F.relu(self.fc1(x))\n",
         "        x = self.fc2(x)\n",
-        "        return x"
+        "        return x\n",
+        "\n",
+        "    # !!New method add from the Pytorch Notebook\n",
+        "    def predict(self, x):\n",
+        "      logits = self.forward(x)\n",
+        "      return F.softmax(logits)"
       ],
       "metadata": {
         "id": "mSTfKTHEJBhy"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -338,7 +343,9 @@
         "    # - Do the operation required to get the predictions                    #\n",
         "    # - Return predictions in a numpy array (hint: return \"argmax\")         #\n",
         "    #########################################################################\n",
-        "    pass\n",
+        "    net = Net(3072, 600, 10)\n",
+        "    net.load_state_dict(torch.load(pytorch_weights))\n",
+        "    y_pred = net.predict(X)\n",
         "    #########################################################################\n",
         "    #                       END OF YOUR CODE                                #\n",
         "    #########################################################################\n",
@@ -351,7 +358,11 @@
         "    # - Do the operation required to get the predictions                    #\n",
         "    # - Return predictions in a numpy array                                 #\n",
         "    #########################################################################\n",
-        "    pass\n",
+        "    with open('drive/MyDrive/Colab Notebooks/softmax_weights.pkl', 'rb') as f:\n",
+        "      W = pickle.load(f)\n",
+        "    new_softmax = Softmax()\n",
+        "    new_softmax.W = W.copy()\n",
+        "    y_pred = new_softmax.predict(X)\n",
         "    #########################################################################\n",
         "    #                       END OF YOUR CODE                                #\n",
         "    #########################################################################\n",
@@ -360,7 +371,7 @@
       "metadata": {
         "id": "bEKafMuaI4By"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
