--- a/homeworks/hw2/Softmax.ipynb
+++ b/homeworks/hw2/Softmax.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "KQ8b6HtX7DWs"
       },
@@ -66,15 +66,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "855dfa22-4c03-42c0-9c0b-74f54afb3f0c"
+        "outputId": "8029f47f-92ba-48a0-f6e4-3b1648e403af"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
@@ -174,15 +174,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32c22faa-d54e-4d36-b738-1346929972f8"
+        "outputId": "98b7cdc4-bd42-4561-db79-61d77908336f"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Files already downloaded and verified\n",
+            "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to data/cifar-10-python.tar.gz\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 170M/170M [00:03<00:00, 50.8MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Extracting data/cifar-10-python.tar.gz to data/\n",
             "Train data shape:  (49000, 3073)\n",
             "Train labels shape:  (49000,)\n",
             "Validation data shape:  (1000, 3073)\n",
@@ -249,7 +263,7 @@
       "metadata": {
         "id": "aFed4lnK7yfC"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -350,12 +364,17 @@
         "        array of length N, and each element is an integer giving the predicted\n",
         "        class.\n",
         "        \"\"\"\n",
-        "        y_pred = np.zeros(X.shape[0])\n",
+        "        # y_pred = np.zeros(X.shape[0])\n",
         "        ###########################################################################\n",
         "        # TODO:                                                                   #\n",
         "        # Implement this method. Store the predicted labels in y_pred.            #\n",
         "        ###########################################################################\n",
-        "        y_pred = np.argmax(X @ self.W, axis=1)\n",
+        "        y_pred = X @ self.W\n",
+        "        y_pred -= np.max(y_pred, axis=1, keepdims=True)\n",
+        "        y_pred = np.exp(y_pred)\n",
+        "        y_pred /= np.sum(y_pred, axis=1, keepdims=True)\n",
+        "        print(f\"softmax probs are {y_pred}\")\n",
+        "        y_pred = np.argmax(y_pred, axis=1)\n",
         "        ###########################################################################\n",
         "        #                           END OF YOUR CODE                              #\n",
         "        ###########################################################################\n",
@@ -380,7 +399,7 @@
       "metadata": {
         "id": "nuhecHcsvJU7"
       },
-      "execution_count": 6,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -404,12 +423,12 @@
       "metadata": {
         "id": "GTqa5eihvOvz"
       },
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "BomGJP517DWv",
         "colab": {
@@ -446,7 +465,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +480,32 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(X_train.shape)\n",
+        "print(y_train.shape)"
+      ],
+      "metadata": {
+        "id": "Yft3QCnnQhYL",
+        "outputId": "2027602d-b710-4ff7-d3cc-a0e6a05bb599",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(49000, 3073)\n",
+            "(49000,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "H6Pzyyf47DWw",
         "colab": {
@@ -625,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "Vpj-_mvS7DWx",
         "colab": {
@@ -661,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "U4uK5bgB7DWy"
       },
@@ -687,16 +731,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "metadata": {
-        "id": "P1VkRfIl7DWz"
+        "id": "P1VkRfIl7DWz",
+        "outputId": "525c59f7-2a9d-4ccb-a6cd-8c856c21c769",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "softmax probs are [[0.12433187 0.17369556 0.01791482 ... 0.01362997 0.35843913 0.26401964]\n",
+            " [0.03753684 0.02668594 0.25535396 ... 0.09593485 0.02066049 0.07588277]\n",
+            " [0.17994913 0.15399774 0.07717118 ... 0.10382669 0.17217458 0.12838231]\n",
+            " ...\n",
+            " [0.17432467 0.11944746 0.01370518 ... 0.01746287 0.27778912 0.36928803]\n",
+            " [0.20212302 0.05562373 0.04882128 ... 0.05052859 0.40758678 0.17891139]\n",
+            " [0.1088409  0.14149383 0.06788267 ... 0.1277562  0.0687559  0.28314645]]\n",
+            "softmax on raw pixels final test set accuracy: 0.396000\n"
+          ]
+        }
+      ],
       "source": [
         "with open('drive/MyDrive/Colab Notebooks/softmax_weights.pkl', 'rb') as f:\n",
         "    W = pickle.load(f)\n",
+        "    # print(f\"softmax weights are {W}\")\n",
         "new_softmax = Softmax()\n",
-        "new_softmax.W = W.copy()"
+        "new_softmax.W = W.copy()\n",
+        "\n",
+        "# evaluate on val set\n",
+        "# Evaluate the best softmax on val set\n",
+        "y_val_pred = new_softmax.predict(X_val)\n",
+        "val_accuracy = np.mean(y_val == y_val_pred)\n",
+        "print('softmax on raw pixels final test set accuracy: %f' % (val_accuracy, ))"
       ]
     },
     {
@@ -710,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "NTkVGxZS7DWz",
         "colab": {
