--- a/homeworks/hw2/Evaluator.ipynb
+++ b/homeworks/hw2/Evaluator.ipynb
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "pZXQTJIKJE_S"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -240,8 +240,12 @@
         "        # TODO:                                                                   #\n",
         "        # Implement this method. Store the predicted labels in y_pred.            #\n",
         "        ###########################################################################\n",
-        "        y_pred = np.zeros(X.shape[0])\n",
-        "        y_pred = np.argmax(X @ self.W, axis=1)\n",
+        "        y_pred = X @ self.W\n",
+        "        y_pred -= np.max(y_pred, axis=1, keepdims=True)\n",
+        "        y_pred = np.exp(y_pred)\n",
+        "        y_pred /= np.sum(y_pred, axis=1, keepdims=True)\n",
+        "        # print(f\"Softmax probs are {y_pred}\")\n",
+        "        y_pred = np.argmax(y_pred, axis=1)\n",
         "        ###########################################################################\n",
         "        #                           END OF YOUR CODE                              #\n",
         "        ###########################################################################\n",
@@ -284,7 +288,7 @@
       "metadata": {
         "id": "gHnLX6-oIkWm"
       },
-      "execution_count": 5,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -311,7 +315,7 @@
         "        x = self.fc2(x)\n",
         "        return x\n",
         "\n",
-        "    # !!New method add from the Pytorch Notebook\n",
+        "    # !!New method added from the Pytorch Notebook\n",
         "    def predict(self, x):\n",
         "      logits = self.forward(x)\n",
         "      return F.softmax(logits)"
@@ -345,7 +349,11 @@
         "    #########################################################################\n",
         "    net = Net(3072, 600, 10)\n",
         "    net.load_state_dict(torch.load(pytorch_weights))\n",
-        "    y_pred = net.predict(X)\n",
+        "    # y_pred = np.array(range(X.size(0)))\n",
+        "    probs = net.predict(X)\n",
+        "    print(f\"pytorch probs are {probs}\")\n",
+        "    y_pred = torch.argmax(probs, dim=1)\n",
+        "    print(f\"pytorch prediction is {y_pred}\")\n",
         "    #########################################################################\n",
         "    #                       END OF YOUR CODE                                #\n",
         "    #########################################################################\n",
@@ -360,9 +368,11 @@
         "    #########################################################################\n",
         "    with open('drive/MyDrive/Colab Notebooks/softmax_weights.pkl', 'rb') as f:\n",
         "      W = pickle.load(f)\n",
+        "    # print(f\"softmax weights are {W}\")\n",
         "    new_softmax = Softmax()\n",
         "    new_softmax.W = W.copy()\n",
         "    y_pred = new_softmax.predict(X)\n",
+        "    # print(f\"softmax prediction is {y_pred}\")\n",
         "    #########################################################################\n",
         "    #                       END OF YOUR CODE                                #\n",
         "    #########################################################################\n",
@@ -371,7 +381,7 @@
       "metadata": {
         "id": "bEKafMuaI4By"
       },
-      "execution_count": 8,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -410,7 +420,7 @@
       "metadata": {
         "id": "400u4eZNJAZq"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -438,8 +448,33 @@
       "metadata": {
         "id": "IEmU5KnwJPBY"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(X_pytorch.shape)\n",
+        "print(X_softmax.shape)"
+      ],
+      "metadata": {
+        "id": "swJrTtFqIBd_",
+        "outputId": "22e0bff0-d4ea-4277-d827-cb0380e94973",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([10000, 3, 32, 32])\n",
+            "(10000, 3073)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -466,10 +501,54 @@
         "print(\"Softmax= %f ... Pytorch= %f\"%(acc_softmax, acc_pytorch))"
       ],
       "metadata": {
-        "id": "VKFPhm1wJjDv"
+        "id": "VKFPhm1wJjDv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "304d4319-cb00-4dbb-d728-f341b8f86bee"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-37-556fcee8a30d>:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "  net.load_state_dict(torch.load(pytorch_weights))\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pytorch probs are tensor([[0.0315, 0.0351, 0.3518,  ..., 0.0191, 0.0032, 0.0057],\n",
+            "        [0.0338, 0.0368, 0.3556,  ..., 0.0194, 0.0033, 0.0064],\n",
+            "        [0.0339, 0.0358, 0.3562,  ..., 0.0193, 0.0033, 0.0062],\n",
+            "        ...,\n",
+            "        [0.0303, 0.0325, 0.3535,  ..., 0.0193, 0.0030, 0.0054],\n",
+            "        [0.0314, 0.0344, 0.3510,  ..., 0.0195, 0.0031, 0.0057],\n",
+            "        [0.0310, 0.0339, 0.3524,  ..., 0.0202, 0.0030, 0.0057]],\n",
+            "       grad_fn=<SoftmaxBackward0>)\n",
+            "pytorch prediction is tensor([2, 2, 2,  ..., 2, 2, 2])\n",
+            "Softmax probs are [[0.02398246 0.26096146 0.03513365 ... 0.11211585 0.02538142 0.10318027]\n",
+            " [0.02469627 0.26706417 0.03443716 ... 0.11286426 0.02619485 0.11087338]\n",
+            " [0.02512423 0.2637516  0.03514134 ... 0.11492727 0.02648502 0.10965312]\n",
+            " ...\n",
+            " [0.02401481 0.25141787 0.03441598 ... 0.11726684 0.02451482 0.10397931]\n",
+            " [0.02362384 0.256266   0.03455883 ... 0.11477297 0.02485136 0.10531852]\n",
+            " [0.02421012 0.25407564 0.03528871 ... 0.11977435 0.02470398 0.10500255]]\n",
+            "Softmax= 0.100000 ... Pytorch= 0.100000\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-7-43fc3b756d4b>:16: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  return F.softmax(logits)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
