--- a/homeworks/hw2/Evaluator.ipynb
+++ b/homeworks/hw2/Evaluator.ipynb
@@ -43,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c04ad643-a5c4-42b3-f197-b902301341b8"
+        "outputId": "09db1970-d205-4467-97b0-d39422da80e4"
       },
       "execution_count": 2,
       "outputs": [
@@ -67,9 +67,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d3516352-b84f-43fe-f256-5bea45f5a7ff"
+        "outputId": "33d5ed30-c627-4e62-a5e9-9f4633b95dfb"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
             "remote: Counting objects: 100% (15/15), done.\u001b[K\n",
             "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
             "remote: Total 47 (delta 7), reused 6 (delta 6), pack-reused 32 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (47/47), 27.72 MiB | 13.55 MiB/s, done.\n",
+            "Receiving objects: 100% (47/47), 27.72 MiB | 15.05 MiB/s, done.\n",
             "Resolving deltas: 100% (14/14), done.\n"
           ]
         }
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "pZXQTJIKJE_S"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "gHnLX6-oIkWm"
       },
-      "execution_count": 29,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -323,7 +323,7 @@
       "metadata": {
         "id": "mSTfKTHEJBhy"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -381,7 +381,7 @@
       "metadata": {
         "id": "bEKafMuaI4By"
       },
-      "execution_count": 37,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -420,7 +420,7 @@
       "metadata": {
         "id": "400u4eZNJAZq"
       },
-      "execution_count": 16,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -448,7 +448,7 @@
       "metadata": {
         "id": "IEmU5KnwJPBY"
       },
-      "execution_count": 18,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -459,12 +459,12 @@
       ],
       "metadata": {
         "id": "swJrTtFqIBd_",
-        "outputId": "22e0bff0-d4ea-4277-d827-cb0380e94973",
+        "outputId": "c6e52695-7c01-4cb2-fddb-0156b1b36341",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,47 +505,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "304d4319-cb00-4dbb-d728-f341b8f86bee"
+        "outputId": "aa398d12-8364-47ff-e14e-ab2da1551a30"
       },
-      "execution_count": 38,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-37-556fcee8a30d>:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-            "  net.load_state_dict(torch.load(pytorch_weights))\n"
+            "<ipython-input-7-556fcee8a30d>:10: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+            "  net.load_state_dict(torch.load(pytorch_weights))\n",
+            "<ipython-input-6-503ba4fa6b09>:16: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+            "  return F.softmax(logits)\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "pytorch probs are tensor([[0.0315, 0.0351, 0.3518,  ..., 0.0191, 0.0032, 0.0057],\n",
-            "        [0.0338, 0.0368, 0.3556,  ..., 0.0194, 0.0033, 0.0064],\n",
-            "        [0.0339, 0.0358, 0.3562,  ..., 0.0193, 0.0033, 0.0062],\n",
+            "pytorch probs are tensor([[0.0457, 0.1703, 0.1116,  ..., 0.0250, 0.0834, 0.0310],\n",
+            "        [0.0728, 0.1288, 0.0062,  ..., 0.0046, 0.4091, 0.3660],\n",
+            "        [0.1964, 0.0851, 0.0116,  ..., 0.0079, 0.5497, 0.1314],\n",
             "        ...,\n",
-            "        [0.0303, 0.0325, 0.3535,  ..., 0.0193, 0.0030, 0.0054],\n",
-            "        [0.0314, 0.0344, 0.3510,  ..., 0.0195, 0.0031, 0.0057],\n",
-            "        [0.0310, 0.0339, 0.3524,  ..., 0.0202, 0.0030, 0.0057]],\n",
+            "        [0.0065, 0.0048, 0.1022,  ..., 0.0466, 0.0083, 0.0047],\n",
+            "        [0.0293, 0.0622, 0.0817,  ..., 0.0959, 0.0273, 0.0464],\n",
+            "        [0.0465, 0.0355, 0.1259,  ..., 0.4225, 0.0256, 0.0459]],\n",
             "       grad_fn=<SoftmaxBackward0>)\n",
-            "pytorch prediction is tensor([2, 2, 2,  ..., 2, 2, 2])\n",
-            "Softmax probs are [[0.02398246 0.26096146 0.03513365 ... 0.11211585 0.02538142 0.10318027]\n",
-            " [0.02469627 0.26706417 0.03443716 ... 0.11286426 0.02619485 0.11087338]\n",
-            " [0.02512423 0.2637516  0.03514134 ... 0.11492727 0.02648502 0.10965312]\n",
-            " ...\n",
-            " [0.02401481 0.25141787 0.03441598 ... 0.11726684 0.02451482 0.10397931]\n",
-            " [0.02362384 0.256266   0.03455883 ... 0.11477297 0.02485136 0.10531852]\n",
-            " [0.02421012 0.25407564 0.03528871 ... 0.11977435 0.02470398 0.10500255]]\n",
-            "Softmax= 0.100000 ... Pytorch= 0.100000\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-7-43fc3b756d4b>:16: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-            "  return F.softmax(logits)\n"
+            "pytorch prediction is tensor([3, 8, 8,  ..., 5, 5, 7])\n",
+            "Softmax= 0.378700 ... Pytorch= 0.440400\n"
           ]
         }
       ]
