--- a/graded_homework/hw1_part2/hw1_part2.ipynb
+++ b/graded_homework/hw1_part2/hw1_part2.ipynb
@@ -40,10 +40,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "w6ORL7TI-xLP",
-        "outputId": "c78d8f1f-7e3d-491a-c4be-bd4f2fdb317c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c78d8f1f-7e3d-491a-c4be-bd4f2fdb317c"
       },
       "outputs": [
         {
@@ -487,11 +487,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "Q7bQlkVvkpYI",
-        "outputId": "d10004c8-89ee-4568-a70b-fc3d2ebca5b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q7bQlkVvkpYI",
+        "outputId": "d10004c8-89ee-4568-a70b-fc3d2ebca5b3"
       },
       "execution_count": 15,
       "outputs": [
@@ -667,12 +667,12 @@
         "        self.scale_factor = self.head_dim ** -0.5  # Scaling factor for attention scores\n",
         "\n",
         "        # TODO: Linear transformations to compute queries (Q), keys (K), and values (V) projecting the input to multi-head dimension\n",
-        "        self.q = ???\n",
-        "        self.k = ???\n",
-        "        self.v = ???\n",
+        "        self.q = nn.Linear(embed_dim, self.head_dim)\n",
+        "        self.k = nn.Linear(embed_dim, self.head_dim)\n",
+        "        self.v = nn.Linear(embed_dim, self.head_dim)\n",
         "\n",
         "        # TODO: Linear transformation project back the output to original embedding dimension\n",
-        "        self.output_projection = ???\n",
+        "        self.output_projection = nn.Linear(self.head_dim * num_heads, embed_dim)\n",
         "\n",
         "\n",
         "    def forward(self, input_tensor):\n",
@@ -689,12 +689,14 @@
         "        batch_size, seq_length, embed_dim = input_tensor.shape\n",
         "\n",
         "        # TODO: Compute Q, K, and V matrices and reshape them for multi-head attention\n",
-        "        q = ??? # Shape: [batch_size, num_heads, seq_length, head_dim]\n",
-        "        k = ???\n",
-        "        v = ???\n",
+        "        input_tensor = input_tensor.unsqueeze(1).repeat(1, self.num_heads, 1, 1)\n",
+        "        # Personal Note : The linear transformations act on the last dimension of input_tensor, i.e. embed_dim\n",
+        "        q = input_tensor @ self.q # Shape: [batch_size, num_heads, seq_length, head_dim]\n",
+        "        k = input_tensor @ self.k\n",
+        "        v = input_tensor @ self.v\n",
         "\n",
         "        # TODO: Compute scaled dot-product attention scores using Q and K matrices and scale factor\n",
-        "        attention_scores = ???\n",
+        "        attention_scores = (q @ k.T) / self.scale_factor\n",
         "\n",
         "        # TODO: Normalize attention scores using softmax\n",
         "        attention_weights = ???\n",
